--- a/jquery.highlight.css
+++ b/jquery.highlight.css
@@ -131,7 +131,7 @@ pre.code .fnc span {
 .php pre.code .var,
 .php pre.code .var span { 
 	color: #b00; 
-};
+}
 .php pre.code .com,
 .php pre.code .com span { 
 	color:#008;
